# Daq

./: .gitignore  README.md
daqDpga/: CMakeLists.txt
daqDpga/include/: Version.h.in  logit.h  pfutils.h  readring.h
daqDpga/src/: daq.cpp  readring.cpp
